# centerface-ncnn

./: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle
cpp/: centerface.id.h  native-lib.cpp
java/com/example/syj/centerface/: MainActivity.java  centerface.java
